# hyper-ray-tracer

./: Cargo.toml
.github/workflows/: ci.yml
src/: aabb.rs  application.rs  arguments.rs  camera.rs  hit_record.rs  hittable.rs  hittable_.rs  hittable_list.rs  logger.rs  main.rs  material.rs  math.rs  perlin_noise.rs  ray.rs  sphere.rs
src/hittable/: bvh_node.rs  constant_medium.rs  cuboid.rs  list.rs  mod.rs  moving_sphere.rs  rect.rs  rotation.rs  sphere.rs  translation.rs
src/materials/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs
src/textures/: checker_texture.rs  image_texture.rs  mod.rs  noise_texture.rs  solid_color.rs
