#-------------------------------------------------------------------------------------------
# Copyright (c) 2023 SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "hyper-ray-tracer"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18"
gl = "0.14.0"
glfw = "0.51"
