#-------------------------------------------------------------------------------------------
# Copyright (c) 2023 SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "hyper-ray-tracer"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18"
gl = "0.14.0"
glfw = "0.51"
rand = "0.8"
rayon = "1.7"

[profile.release]
debug = true

[profile.production]
inherits = "release"
codegen-units = 1
strip = true
lto = true
