#-------------------------------------------------------------------------------------------
# Copyright (c) 2023 SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "hyper-ray-tracer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
cgmath = "0.18"
clap = { version = "4.1", features = [ "derive" ] }
fern = { version = "0.6", features = [ "colored" ] }
gl = "0.14.0"
glfw = "0.51"
log = "0.4"
image = "0.24"
rand = "0.8"
rayon = "1.7"

[profile.production]
inherits = "release"
codegen-units = 1
strip = true
lto = true
